# Mangetamain_app

./: .coverage  README.md  app_manager.py  app_v1.py  pyproject.toml  recipe_app.py  requirements.txt  tsne_module.py
.github/workflows/: ci.yml
data/: pp_recipes_name_1.csv  pp_recipes_name_4.csv
data/split_datasets/: pp_recipes_name_part_2.csv  pp_recipes_name_part_3.csv
logs/: a_supprimer.txt
source/: DataPreprocess.rst  FindingCloseRecipes.rst  conf.py  index.rst  modules.rst  tsne_module.rst
src/: app_manager.py
src/DataPreprocess/: data_cleaning.py  data_preprocessor.py  feat_engineering.py  normalizer.py  run_preprocessing.py  split_dataset.py  vectorizer_preparator.py
src/FindingCloseRecipes/: config.py  distances.py  recipe_finder.py  run_recipe_finder.py  vectorizers.py
src/recipe_app/: recipe_app.py
test/: Test_unitaire_recipe_app.py  recipe_app.py
tests/: test_data_cleaning.py  test_data_preprocessor.py  test_distances.py  test_feat_engineering.py  test_normalizer.py  test_recipe_finder.py  test_run_preprocessing.py  test_run_recipe_finder.py  test_split_dataset.py  test_unitaire_recipe_app.py  test_vectorizer_preparator.py  test_vectorizers.py
