[tool.poetry]
name = "webapp-recipe-analysis"
version = "0.1.0"
description = "Webapp for recipe analysis of Mangetamain company"
authors = ["Robin Guiavarch <robin.guiavarch@gmail.com>"]
readme = "README.md"
packages = [{ include = "app_v1" }]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.2"
numpy = "^2.1.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
plotly = "^5.24.1"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
pillow = "^11.0.0"
requests = "^2.32.3"
nltk = "^3.8"  # Ajouté ici, au lieu de la deuxième section

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
black = "^24.8.0"
mypy = "^1.11.2"
pytest-cov = "^5.0.0"
sphinx = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
